k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-service
  namespace: oficina
spec:
  type: ClusterIP
  selector:
    app: oficina-app
  ports:
    - port: 80
      targetPort: 8080
